--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -47,6 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo">
 
         <TextView
+            android:id="@+id/tvWelcome"
             style="@style/textHeaderS"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
             android:textAlignment="center" />
 
         <TextView
+            android:id="@+id/tvDeskWelcome"
             style="@style/textBodyM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
