--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,7 +10,7 @@
         android:id="@+id/background_top"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/background_top"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/background_group"
         android:elevation="4dp"
         android:orientation="vertical"
@@ -96,7 +98,7 @@
                 android:id="@+id/btnFbLogin"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginEnd="4dp"
                 android:contentDescription="@string/btnFb"
                 android:src="@drawable/ic_fb" />
