--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,16 +47,17 @@
         android:layout_width="match_parent"
         android:layout_height="257dp"
         android:layout_marginBottom="8dp"
-        android:scaleType="centerCrop"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/backround_top2"/>
+        android:background="@drawable/poster"/>
 
-    <TextView
+   <!-- <TextView
         style="@style/textHeaderS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background=""
         android:layout_marginTop="45dp"
         android:layout_marginStart="16dp"
         app:layout_anchor="@id/imageView3"
@@ -65,6 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchBar" />
+        -->
 
     <TextView
         android:id="@+id/textView"
@@ -76,6 +78,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/description_home"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
