--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
@@ -196,33 +199,23 @@
             android:id="@+id/btnFbLogin"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="4dp"
             android:contentDescription="@string/btnFb"
             android:src="@drawable/ic_fb" />
 
-        <ImageView
-            android:id="@+id/btnGoogleLogin"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="0.5dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/btnGoogle"
-            android:src="@drawable/ic_google" />
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/btn_google_login"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_google"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"/>
 
-    <TextView
-        android:id="@+id/logInGuest"
-        style="@style/textBodyM"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/log_guest"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groupLogin" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
