--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -36,10 +36,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView1">
 
         <ImageView
+            android:id="@+id/iv_user_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="centerCrop"
 
+            android:scaleType="centerCrop"
             android:src="@drawable/backround_top2" />
 
         <LinearLayout
@@ -124,7 +125,7 @@
         tools:layout_editor_absoluteX="16dp" />
 
     <Button
-        android:id="@+id/btnLog"
+        android:id="@+id/btnLogout"
         style="@style/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
