--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -186,33 +186,18 @@
         android:id="@+id/groupLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/background_top"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMasukDengan">
 
-        <ImageView
-            android:id="@+id/btnFbLogin"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="4dp"
-            android:contentDescription="@string/btnFb"
-            android:src="@drawable/ic_fb" />
-
-        <ImageButton
+        <com.google.android.gms.common.SignInButton
             android:id="@+id/btn_google_login"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_google"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
