--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,20 +17,20 @@
     <style name="Theme.DentifyDentalIdentify" parent="Base.Theme.DentifyDentalIdentify" />
 
     <style name="button">
-        <item name="android:fontFamily">@font/kalam_bold</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
     </style>
     <style name="textHeaderL">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">34sp</item>
-        <item name="android:fontFamily">@font/kalam_bold</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
     </style>
 
     <style name="textHeaderM">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:fontFamily">@font/kalam_bold</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
 
     </style>
 
@@ -38,7 +38,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:fontFamily">@font/kalam_bold</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
 
     </style>
 
@@ -46,7 +46,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">@font/kalam_regular</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
 
     </style>
 
@@ -54,7 +54,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">@font/kalam_regular</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
 
     </style>
 
@@ -62,7 +62,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">@font/kalam_regular</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
 
     </style>
 
