--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -89,29 +89,24 @@
             android:textAlignment="center" />
 
         <LinearLayout
-            android:layout_width="299dp"
-            android:layout_height="match_parent"
+            android:id="@+id/btnGoogleLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center">
 
             <ImageView
-                android:id="@+id/btnFbLogin"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="4dp"
-                android:contentDescription="@string/btnFb"
-                android:src="@drawable/ic_fb" />
-
-            <ImageView
-                android:id="@+id/btnGoogleLogin"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="0.5dp"
-                android:layout_marginEnd="16dp"
                 android:contentDescription="@string/btnGoogle"
                 android:src="@drawable/ic_google" />
+            <TextView
+                style="@style/textBodyL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/sign_in"/>
         </LinearLayout>
 
     </LinearLayout>
