--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,7 +93,6 @@
                 android:layout_height="wrap_content"
                 android:alpha="0"
                 android:text="@string/email"
-                android:textColor="@color/black"
                 tools:alpha="100" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -119,9 +118,9 @@
                 style="@style/textBodyS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:alpha="0"
                 android:text="@string/password"
-                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/messageTextView"
                 tools:alpha="100" />
