--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,7 +26,7 @@
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.ps108.dentify.ui.profile.ProfileFragment"
+        android:name="com.ps108.dentify.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_settings" />
 </navigation>
