Change bottom nav and navigation implementation

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,8 @@
 
     <item
         android:id="@+id/navigation_diagnosis"
-        android:icon="@drawable/baseline_add_24"
-        android:title="@string/title_diagnosis" />
+        android:title=""
+        android:enabled="false"/>
 
     <item
         android:id="@+id/navigation_settings"
