--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,7 +31,7 @@
     </com.google.android.material.search.SearchView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvGithubUser"
+        android:id="@+id/rvDiagnosisList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:overScrollMode="never"
