--- a/app/src/main/res/layout/diagnosis_history_list.xml
+++ b/app/src/main/res/layout/diagnosis_history_list.xml
@@ -54,6 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:maxLines="2"
             android:text="Deskripsi"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/circularRevealCardView"
